[project]
name = "local-key-router"
version = "0.1.0"
description = "Local OpenAI-compatible router for multiple upstream API keys."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.2",
    "uvicorn>=0.30.0",
]

[tool.uv]
package = false
